# Matrix

./: .travis.yml  CMakeLists.txt  README.md
sources/: Matrix.cpp  Matrix.hpp
tests/: test1.cpp
